--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -52,29 +52,53 @@ body {
   flex: 0 0 320px;
 }
 
+.navbar-brand {
+  color:white;
+}
+
 /* Tablero con Grid */
 .board {
   --size: 10;
-  --cell: max(35px, 4.8vmin);
   display: grid;
-  grid-template-columns: repeat(var(--size), var(--cell));
-  gap: 8px;
-  justify-content: center;
+  grid-template-columns: repeat(var(--size), 1fr);
+  grid-template-rows: repeat(var(--size), 1fr);
+  width: fit-content;
+  aspect-ratio: 1 / 1; /* mantiene cuadrado perfecto */
+  gap: 5px;
+  place-content: center;
+  border-radius: 10px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  transition: filter 0.3s ease, opacity 0.3s ease;
+}
+
+/* === TABLERO BLOQUEADO === */
+.board.disabled {
+  pointer-events: none;
+  filter: grayscale(90%) brightness(0.8);
+  opacity: 0.6;
+  cursor: not-allowed;
 }
 
 .cell {
-  width: var(--cell);
-  height: var(--cell);
+  width: 41px;
+  height: 41px;
+  background: #0f1620;
+  border: 2px solid #223245;
+  border-radius: 6px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #223245;
-  border-radius: 10px;
-  background: #0f1620;
   cursor: pointer;
-  user-select: none;
-  transition: transform 0.06s, background 0.15s, border-color 0.15s;
+  transition: background 0.15s, transform 0.1s, border-color 0.15s;
+  box-sizing: border-box; /* evita que el borde agrande las celdas */
 }
+
+.cell:hover {
+  transform: translateY(-2px);
+}
+
 
 .cell:hover {
   transform: translateY(-2px);
@@ -101,14 +125,14 @@ body {
 
 /* Disparo acertado */
 .cell.hit {
-  background-color: pink; /* rosa fucsia */
-  border-color: pink;
+  background-color: rgb(255, 98, 125); /* rosa fucsia */
+  border-color: rgb(255, 54, 88);
 }
 
 /* Disparo fallado */
 .cell.miss {
   background-color: #6ea8fe; /* azul marino */
-  border-color: #6ea8fe;
+  border-color: #3988ff;
 }
 
 /* barco propio visible */
@@ -190,17 +214,9 @@ body {
   transform: none;
 }
 
-/*Tablero deshabilitado*/
-.board.disabled {
-  pointer-events: none;
-  opacity: 1;
-  filter: grayscale(0.5);
-  cursor: not-allowed;
-  transition: opacity 0.3s ease;
-}
 
-/* Tablero activo*/
-.board {
-  opacity: 1;
-  transition: opacity 0.3s ease;
+@media (max-width: 768px) {
+  .board {
+    --cell: 40px;
+  }
 }
